--- a/styles.css
+++ b/styles.css
@@ -841,7 +841,7 @@ img{
 .project__img{
     width: 211px;
     justify-self: center;
-    object-position: 0px -10px;
+    object-position: 0px -3px;
 }
 /*==================== TESTIMONIAL ====================*/
 .testimonial__data,
@@ -1035,11 +1035,11 @@ img{
 }
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
-@media screen and (max-width:413px){
+@media screen and (min-width:413px){
     .project__img{
         width: 211px;
         justify-self: center;
-        object-position: 0px -5px;
+        object-position: 0px -4px;
     }
 }
 @media screen and (max-width: 350px){
